REGRESSION(292932@main): Broke the non-unified builds https://bugs.webkit.org/show_bug.cgi?id=290766

Unreviewed, add missing include for GStreamerVideoCaptureDeviceManager.

* Source/WebCore/platform/mediastream/gstreamer/PipeWireCaptureDeviceManager.cpp:

Canonical link: https://commits.webkit.org/292940@main